# FileGrouper

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCY_LICENSES.md  LICENSE  MARKETING.md  MIGRATION_GUIDE.md  PACKAGING.md  README.md  RELEASE_NOTES_1.0.0.md  TUTORIALS.md  main.py  masterplan.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: ci.yml  os-smoke.yml
archiflow/: gui.py  gui_components.py  gui_texts.py  gui_theme.py
assets/marketing/: ASSET_INDEX.md  comparison-chart.md  pricing-licensing.md  roi-calculator-example.csv  social-media-copy.md
assets/marketing/screenshots/: README.md
docs/: Makefile  conf.py  contributing.rst  index.rst
docs/api/: class-diagrams.rst  index.rst  overview.rst
docs/development/: algorithm-explanations.rst  architecture-overview.rst  asyncio-exploration.rst  contributing-guidelines.rst  development-setup.rst  index.rst  phase6-performance-report.rst  phase8-documentation-review.rst  phase8-final-polish.rst  phase8-performance-baselines.rst  phase8-real-world-testing.rst  testing-guidelines.rst
docs/examples/: common-use-cases.rst  faq.rst  index.rst  quick-workflows.rst  step-by-step-tutorials.rst  troubleshooting.rst  video-scripts.rst
docs/tutorials/: getting-started.rst  index.rst
docs/user-guide/: cli-reference.rst  configuration.rst  gui-walkthrough.rst  index.rst  installation.rst  quick-start.rst
filegrouper/: classifier.py  cli.py  config_service.py  constants.py  duplicate_detector.py  errors.py  gui.py  gui_components.py  gui_texts.py  gui_theme.py  hash_cache.py  logger.py  models.py  organizer.py  pause_controller.py  pipeline.py  profile_service.py  report_exporter.py  scanner.py  transaction_service.py  utils.py  validators.py
scripts/: build_dist.ps1  build_dist.sh  capture_marketing_screenshots.py  docs_self_check.py  publish_dist.sh  verify_licenses.py
tests/: conftest.py
tests/cli/: test_cli_commands.py  test_cli_config_profile.py  test_cli_matrix.py  test_cli_output.py  test_cli_validation.py
tests/e2e/: conftest.py  test_end_to_end.py
tests/integration/: test_duplicate_detector.py  test_integration_matrix.py  test_organizer.py  test_pipeline.py  test_transaction_service.py
tests/performance/: README.md  __init__.py  asyncio_probe.py  baseline_10k_cold_group_and_dedupe.json  baseline_10k_group_and_dedupe.json  baseline_5k_group_and_dedupe.json  baseline_5k_group_only.json  baseline_example.json  latest_benchmark.json  perf_utils.py  run_benchmark.py  test_perf_tools.py
tests/unit/: test_classifier.py  test_config_service.py  test_hash_cache.py  test_logger.py  test_models.py  test_scanner.py  test_scanner_edge_cases.py  test_unit_matrix.py  test_validators.py
