[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filegrouper"
version = "1.0.0"
description = "Organize and deduplicate files on external drives with ease"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Development Team", email = "dev@example.com"}
]
keywords = ["file-organization", "duplicate-detection", "file-management"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

dependencies = [
    "PySide6>=6.6.0,<7",
    "pyqtdarktheme>=2.1.0,<3; python_version < '3.12'",
    "Pillow>=10.0,<11",
]

[project.optional-dependencies]
dev = [
    "sphinx>=7.0,<8",
    "sphinx-rtd-theme>=1.3,<2",
    "sphinx-autodoc-typehints>=1.24,<2",
    "chardet>=5.2,<6",
    "tox>=4.11,<5",
    "pre-commit>=3.6,<4",
    "pytest>=7.4,<8",
    "pytest-cov>=4.1,<5",
    "pytest-xdist>=3.3,<4",
    "black>=23.10,<24",
    "isort>=5.12,<6",
    "flake8>=6.1,<7",
    "mypy>=1.5,<2",
    "pylint>=3.0,<4",
    "pyinstaller>=6.0,<7",
]

[project.urls]
Homepage = "https://github.com/yourusername/filegrouper"
Documentation = "https://filegrouper.readthedocs.io"
Repository = "https://github.com/yourusername/filegrouper.git"
"Bug Tracker" = "https://github.com/yourusername/filegrouper/issues"

[project.scripts]
filegrouper = "filegrouper.cli:main"

[tool.setuptools]
packages = ["filegrouper"]

[tool.black]
line-length = 120
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | \.eggs
  | \.mypy_cache
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
known_first_party = ["filegrouper"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = """
    --strict-markers
    --tb=short
    --cov=filegrouper
    --cov-report=html
    --cov-report=term-missing
    --cov-report=xml
"""
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.coverage.run]
branch = true
source = ["filegrouper"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
precision = 2

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "C0302",  # too-many-lines
    "R0801",  # duplicate-code
    "R0902",  # too-many-instance-attributes
    "R0903",  # too-few-public-methods
    "R0911",  # too-many-return-statements
    "R0912",  # too-many-branches
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "R0915",  # too-many-statements
    "R1702",  # too-many-nested-blocks
    "W0212",  # protected-access
    "W0603",  # global-statement
    "W0718",  # broad-exception-caught
    "W1203",  # logging-fstring-interpolation
    "C0415",  # import-outside-toplevel
    "C0103",  # invalid-name (Qt overrides like closeEvent)
    "C0200",  # consider-using-enumerate
    "W0108",  # unnecessary-lambda
    "E0611",  # no-name-in-module (PySide)
    "E1102",  # not-callable (dynamic theme helper)
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-attributes = 10
max-args = 8

[tool.pylint.main]
persistent = false
